# ScBridge

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ScBridge.h
Jui/: CMakeLists.txt  Canvan.cpp  Canvan.h  JuiConfig.h.in
JuiHdr/: CMakeLists.txt
JuiLib/: CMakeLists.txt  Jui.lib
QntGui/: CMakeLists.txt  QntConfig.h.in  QntGui.cpp  QntGui.h  resource.h
ScBridge/: CMakeLists.txt  ScBridge.cpp  ScBridge.h
modules/: FindSupercollider.cmake
source/: CMakeLists.txt  ScBridgeConfig.cmake.in
source/externalLibs/oscpack/: CMakeLists.txt
source/externalLibs/oscpkt/: CMakeLists.txt
source/include/: CMakeLists.txt  Oscpkt.h  Oscpkt2.h  ScBridge.h  ScLang.h  ScServer.h
source/src/: CMakeLists.txt  ScBridge.cpp  ScLang.cpp  ScServer.cpp
source/test/: CMakeLists.txt  ScTester.cpp  ScTester.h
