cmake_minimum_required (VERSION 3.8.2)
cmake_policy(SET CMP0048 NEW)
project (ScBridge VERSION 0.0.1)

message(STATUS "")
message(STATUS "ScBridge [${PROJECT_VERSION}] config init with variables...")

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
set(CMAKE_VS_INCLUDE_INSTALL_TO_DEFAULT_BUILD TRUE)
set(CMAKE_VS_INCLUDE_PACKAGE_TO_DEFAULT_BUILD TRUE)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

message(STATUS "\t CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message(STATUS "\t CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})
message(STATUS "\t CMAKE_GENERATOR : " ${CMAKE_GENERATOR})
message(STATUS "\t CMAKE_BUILD_TYPE : " ${CMAKE_BUILD_TYPE})
message(STATUS "\t CMAKE_CONFIGURATION_TYPES : " ${CMAKE_CONFIGURATION_TYPES})

add_subdirectory (source)

export(PACKAGE ScBridge)

message(STATUS "ScBridge config done...\n")



